// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> component unit tests should take snapshot that matches component 1`] = `
<Footer>
  <footer
    className="footer-0-2-1"
  >
    <p>
      created by steven failla © 2020
    </p>
  </footer>
</Footer>
`;

exports[`<Footer> unit tests should take a snapshot 1`] = `
<DocumentFragment>
  <footer
    class="footer-0-2-1"
  >
    <p>
      created by steven failla © 2020
    </p>
  </footer>
</DocumentFragment>
`;
